# Mnemosyne

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  AUDIOPARSER_LITELLM_REFACTOR.md  AUDIT_REPORT.md  BACKEND_PHASE2_AUDIT_REPORT.md  BUG_FIXES_SUMMARY.md  CLAUDE.md  CODE_HEALTH_REPORT.md  CODE_REVIEW.md  CODE_REVIEW_README.md  CODE_REVIEW_SUMMARY.md  CRITICAL_ISSUES.md  CURRENT_IMPLEMENTATION_STATUS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_STATUS.md  INTEGRATION_SUMMARY.md  LICENSE  PHASE1-ARCHITECTURE-SCAN.md  PHASE2_BACKEND_AUDIT.md  PHASE3_SDK_AUDIT_REPORT.md  PHASE3_SDK_AUDIT_SUMMARY.md  PHASE3_SDK_ISSUES_TRACKER.md  PHASE4_CRITICAL_ISSUES_REPORT.md  PHASE_2_CURRENT_STATUS.md  PHASE_2_FORMAT_SUPPORT_SUMMARY.md  PHASE_2_REFERENCE_REVIEW.md  PHASE_2_REMAINING_IMPLEMENTATION_PLAN.md  PHASE_2_ROADMAP.md  QUICK_START_PHASE_2.md  README.md  REFACTORING_CHECKLIST.md  REFERENCE_ANALYSIS.md  RESEARCH.md  RESEARCH_PLAN.md  REVIEW_INDEX.md  (+17 more)
.claude/skills/memory/: SKILL.md
.github/workflows/: typescript-sdk.yml
alembic/: env.py
alembic/versions/: 001_add_hierarchical_indices_columns.py
backend/: __init__.py  config.py  database.py  main.py  worker.py
backend/api/: __init__.py  auth.py  chat.py  collections.py  deps.py  documents.py  retrievals.py
backend/chunking/: __init__.py  chonkie_chunker.py
backend/core/: __init__.py  exceptions.py  security.py
backend/embeddings/: __init__.py  openai_embedder.py
backend/middleware/: __init__.py  rate_limiter.py
backend/models/: __init__.py  api_key.py  chat_message.py  chat_session.py  chunk.py  collection.py  document.py  user.py
backend/nlp/: __init__.py  synonym.py
backend/parsers/: __init__.py  audio_parser.py  content_cleaner.py  docling_parser.py  email_parser.py  excel_parser.py  figure_parser.py  image_parser.py  json_parser.py  ppt_parser.py  text_parser.py  video_parser.py  video_utils.py  youtube_parser.py
backend/processors/: __init__.py  academic_processor.py  base.py  book_processor.py  detector.py  email_processor.py  legal_processor.py  llm_resume_extractor.py  manual_processor.py  presentation_processor.py  qa_processor.py  ragflow_utils.py  resume_processor.py  table_processor.py
backend/prompts/: __init__.py  base.py  citation.py
backend/schemas/: __init__.py  chat.py  collection.py  document.py  retrieval.py
backend/search/: __init__.py  context_expander.py  hierarchical_search.py  vector_search.py
backend/services/: __init__.py  cache_service.py  chat_service.py  document_summary_service.py  followup_service.py  judge_service.py  lightrag_service.py  query_reformulation.py  quota_service.py  reasoning_service.py  reranker_service.py
backend/storage/: __init__.py  base.py  factory.py  local.py  s3.py
backend/tasks/: __init__.py  process_document.py  retry_pending_documents.py
backend/utils/: __init__.py  content_type.py  error_handlers.py  metadata_validator.py  retry.py  sanitize.py
backend/vision/: __init__.py  layout_recognizer.py  ocr.py  operators.py  recognizer.py  table_structure_recognizer.py
docs/: README.md
docs/archive/: implementation-history.md  planning-history.md  verification-history.md
docs/developer/: end-to-end-architecture.md  multi-tenancy.md  phase1-big-picture-architecture.md  product-requirements.md  sdk-comparison-review.md  setup.md  typescript-sdk-plan.md
docs/user/: api-reference.md  architecture.md  configuration.md  deployment-cloud.md  deployment-options.md  deployment.md  getting-started.md  sdk-guide.md  sdk-typescript-guide.md
examples/: README.md  lightrag_api_demo.py  lightrag_demo.py
monitoring/: prometheus.yml
nginx/: nginx.conf
references/: README.md
scripts/: backup-complete.sh  backup.sh  deploy.sh  init.sql  restore.sh  verify_lightrag.py
sdk/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  pyproject.toml
sdk-ts/: .eslintrc.js  .gitignore  .npmignore  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  README.md  package.json  tsconfig.json  vitest.config.ts
sdk-ts/.changeset/: config.json
sdk-ts/examples/: README.md  async-operations.ts  basic-retrieval.ts  ingestion-workflow.ts  streaming-chat.ts  tsconfig.json  video-ingestion.ts
sdk-ts/src/: base-client.ts  client.ts  exceptions.ts  index.ts  streaming.ts  version.ts
sdk-ts/tests/: setup.ts
sdk/examples/: async_streaming.py  audio_ingestion.py  basic_retrieval.py  excel_ingestion.py  image_ingestion.py  ingestion_workflow.py  langchain_integration.py  multimodal_ingestion.py  streaming_chat.py  video_ingestion.py
sdk/mnemosyne/: __init__.py  _base_client.py  _streaming.py  async_client.py  client.py  exceptions.py  version.py
sdk/mnemosyne/resources/: __init__.py  auth.py  chat.py  collections.py  documents.py  retrievals.py
sdk/mnemosyne/types/: __init__.py  auth.py  chat.py  collections.py  documents.py  retrievals.py
sdk/tests/: __init__.py  conftest.py
sdk/tests/unit/: __init__.py  test_client.py  test_collections.py  test_retrievals.py
src/: .env.example  README.md  RICH_METADATA.md  app.py  config.py  fast_api.py  main.py
src/api/: search.py  search_api.py
src/model/: model_utls.py
src/mongo/: MongoService.py  utils.py
src/service/: LLMService.py  LangchainService.py  MnemsoyneService.py  MongoService.py  llm_utils.py  mongo_utils.py  utils.py
src/templates/: index.html
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_chat_api.py  test_parser_pipeline.py  test_retrieval_api.py
tests/unit/: test_audio_parser.py  test_cache_service.py  test_chat_service.py  test_document_summary_service.py  test_embedder.py  test_excel_parser.py  test_hierarchical_search.py  test_image_parser.py  test_legal_processor_patterns.py  test_lightrag_service.py  test_llm_resume_extractor.py  test_new_parsers.py  test_processors.py  test_query_reformulation.py  test_ragflow_patterns.py  test_reranker_service.py  test_sprint2_processors.py  test_sprint3_features.py  test_sprint4_features.py  test_vector_search.py  test_video_parser.py  test_youtube_parser.py
(+52 files in other folders)
