[tool.poetry]
name = "mnemosyne"
version = "0.1.0"
description = "Open-source RAG-as-a-Service platform"
authors = ["Mnemosyne Team"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
pgvector = "^0.3.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
alembic = "^1.13.0"
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"
docling = "^1.0.0"
chonkie = "^0.1.0"
openai = "^1.0.0"
tiktoken = "^0.7.0"
python-magic = "^0.4.27"
flashrank = "^0.2.0"
rerankers = {extras = ["flashrank"], version = "^0.7.1"}
litellm = "^1.77.5"
langchain-litellm = "^0.2.3"
slowapi = "^0.1.9"
tenacity = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.27.0"
black = "^24.0.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
